# dufteplots

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: index.md
docs/plots/: dot_dash.md  layered_focus.md  range_frame.md  slopegraph.md  small_multiples.md  sparklines.md  time_series.md
evaluation/: output_evaluation.ipynb
src/: __init__.py
src/dufte/: main.py
src/dufte/plots/: bar.py  boxplot.py  histogram.py  line.py  scatter.py
src/dufteplots/: config_theme.py
src/dufteplots/plots/: dot_dash_plot.py  layered_focus.py  range_frame.py  slopegraph.py  small_multiples.py  sparklines.py  time_series.py
src/plot_dufte/: __init__.py
src/plot_dufte/plots/: __init__.py  dot_dash_plot.py  layered_focus.py  slopegraph.py  small_multiples.py  sparklines.py  time_series.py
tests/: test_plots.py  test_theme.py
