[tool.poetry]
name = "dufteplots"
version = "0.1.1"
description = "dufteplots - Ein Python-Paket für Tufte-Style Plots"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Saplinging/dufteplots"
documentation = "https://saplinging.github.io/dufteplots/"
packages = [{include = "dufteplots", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
plotnine = ">=0.12.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.9.0"
pytest = "^8.0.0"
pre-commit = "^3.6.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.20"
mkdocstrings = {extras = ["python"], version = "^0.25.0"}
mkdocs-autorefs = "^1.2.0"
ipykernel = "^7.2.0"
mkdocs-with-pdf = "^0.9.3"

[tool.poetry.scripts]
dufteplots = "dufteplots.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
